Add a bunch of pages and an endpoint to get user info from a session ID.
